JIRA ID: APPSEC-161 and APPSEC-158 Sonar related bug fixes
git-svn-id: http://svn.theresis.org/svn/gt-appsec/AuthZForce/AuthZForce/trunk@2227 b5d8583f-9428-48d8-90d7-9fcbe50e6af6